--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>NECKLACE</h3>
-                                <p>It's price is 21$ per item</p>
+                                <p>Its price is 21$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -94,7 +94,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>NECKLACE</h3>
-                                <p>It's price is 20$ per item</p>
+                                <p>Its price is 20$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -106,7 +106,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>NECKLACE</h3>
-                                <p>It's price is 19$ per item</p>
+                                <p>Its price is 19$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -120,7 +120,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>NECKLACE</h3>
-                                <p>It's price is 22$ per item</p>
+                                <p>Its price is 22$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -132,7 +132,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>NECKLACE</h3>
-                                <p>It's price is 20$ per item</p>
+                                <p>Its price is 20$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -144,7 +144,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>NECKLACE</h3>
-                                <p>It's price is 18$ per item</p>
+                                <p>Its price is 18$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -169,7 +169,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>RINGS</h3>
-                                <p>It's price is 7$ per item</p>
+                                <p>Its price is 7$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -181,7 +181,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>RINGS</h3>
-                                <p>It's price is 10$ per item</p>
+                                <p>Its price is 10$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -193,7 +193,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>RINGS</h3>
-                                <p>It's price is 9$ per item</p>
+                                <p>Its price is 9$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -207,7 +207,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>RINGS</h3>
-                                <p>It's price is 11$ per item</p>
+                                <p>Its price is 11$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -219,7 +219,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>RINGS</h3>
-                                <p>It's price is 8$ per item</p>
+                                <p>Its price is 8$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -231,7 +231,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>RINGS</h3>
-                                <p>It's price is 12$ per item</p>
+                                <p>Its price is 12$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -256,7 +256,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>EARRINGS</h3>
-                                <p>It's price is 15$ per item</p>
+                                <p>Its price is 15$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -268,7 +268,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>EARRINGS</h3>
-                                <p>It's price is 14$ per item</p>
+                                <p>Its price is 14$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -280,7 +280,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>EARRINGS</h3>
-                                <p>It's price is 16$ per item</p>
+                                <p>Its price is 16$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -294,7 +294,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>EARRINGS</h3>
-                                <p>It's price is 13$ per item</p>
+                                <p>Its price is 13$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -306,7 +306,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>EARRINGS</h3>
-                                <p>It's price is 17$ per item</p>
+                                <p>Its price is 17$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
@@ -318,7 +318,7 @@
                         <div class="overley">
                             <div class="text">
                                 <h3>EARRINGS</h3>
-                                <p>It's price is 18$ per item</p>
+                                <p>Its price is 18$ per item</p>
                                 <i class="fas fa-cart-arrow-down"></i>
                                 <i class="fas fa-heart heart"></i>
                             </div>
